--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body {
     transition: all 0.5s ease;
 }
 
+.logo {}
+
 .rantau-text {
     color: #CD2027;
 }
@@ -19,6 +21,7 @@ body {
 
 .navbar-nav li a {
     padding: 0 !important;
+    padding-bottom: 5px !important;
     text-transform: uppercase;
     margin-right: 15px !important;
     margin-left: 15px !important;
@@ -62,8 +65,8 @@ body {
 }
 
 .scrolled-nav {
-    padding-top: 8px !important;
-    padding-bottom: 8px !important;
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
     -webkit-box-shadow: -4px 4px 5px rgba(0, 0, 0, 0.78);
     box-shadow: -4px 4px 5px rgba(0, 0, 0, 0.78);
     background-color: salmon;
@@ -385,6 +388,7 @@ body {
     letter-spacing: 1.5px;
     line-height: 1.3;
     color: #898989;
+    padding-top: 10px;
 }
 
 .process-icon {
@@ -425,8 +429,8 @@ body {
 .process-item-text {
     font-weight: 200;
     font-family: 'gupter';
-    letter-spacing: 5px;
-    line-height: 1.5;
+    letter-spacing: 1.5px;
+    line-height: 1.7;
     color: #898989;
 }
 
@@ -435,7 +439,11 @@ body {
 
 /*CONTACT*/
 .contact {
-    background: #f9f9f9;
+    background: linear-gradient(rgba(249, 249, 249, 0.9), rgba(249, 249, 249, 0.9)), url('../img/logo/rantau media fix.png') !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: contain !important;
+    background-attachment: fixed !important;
     padding-top: 50px;
     margin-bottom: 0 !important;
 }
@@ -459,8 +467,6 @@ body {
 }
 
 .form-control {
-    /*display: block;*/
-    /*width: 100%;*/
     background-color: transparent !important;
     border: none !important;
     border-bottom: 2px solid #CD2027 !important;
